Port First few review comments to Java21 parser