@@ -445,7 +445,7 @@ public class ReloadableJava21ParserVisitor extends TreePathScanner<J, Space> {
                                 mapAnnotations(vt.getModifiers().getAnnotations(), recordAnnotationPosTable.getOrDefault(vt.getName(), new HashMap<>()))
                         );
                         Space typeExpressionPrefix = whitespace();
-                        JRightPadded<Statement> varDec = this.<Statement>convert(vt, t -> { Space suffix = whitespace(); skip(","); skip(")"); return suffix; })
+                        JRightPadded<Statement> varDec = this.<Statement>convert(vt, __ -> { Space suffix = whitespace(); skip(","); skip(")"); return suffix; })
                                 .map(elem -> {
                                     if (elem instanceof J.VariableDeclarations vd) {
                                         return vd.withPrefix(varDecsPrefix).withTypeExpression(vd.getTypeExpression().withPrefix(typeExpressionPrefix));
@@ -464,8 +464,8 @@ public class ReloadableJava21ParserVisitor extends TreePathScanner<J, Space> {
             primaryConstructor = JContainer.build(
                     prefix,
                     ListUtils.map(varDecs, elem -> {
-                        if (elem != null && elem.getElement() instanceof J.VariableDeclarations vd) {
-                            return elem.withElement(vd.withLeadingAnnotations(recordParams.get(vd.getVariables().getFirst().getSimpleName())));
+                        if (elem.getElement() instanceof J.VariableDeclarations vd) {
+                            return elem.withElement(vd.withLeadingAnnotations(recordParams.get(vd.getVariables().get(0).getSimpleName())));
                         }
                         return elem;
                     }),
